# personalchief

./: 01.ipynb  pyproject.toml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
app/agents/: personal_chief.py
app/api/v1/: chat.py  oss.py
db/: personal_chief.db
resources/: personal_chief.db-shm  personal_chief.db-wal
